<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Networking Examples</string>

    <string name="destination_label">Destination:</string>    
    <string name="realm">Auth Realm</string>
    <string name="username">User Name:</string>
    <string name="password">Password:</string>
    
    <string name="category_socket_examples">Socket Examples</string>
    <string name="socket_tcp">TCP Socket</string>
    <string name="socket_udp">UDP Socket</string>
    
    <string name="category_state_examples">Network State Examples</string>
    <string name="net_state">Network State</string>
    
    <string name="category_httpclient_examples">HttpClient Examples</string>
    <string name="http_get">HTTP GET</string>
    <string name="http_get_gzip">HTTP GET (w/GZip)</string>
    <string name="http_post">HTTP POST</string>
    <string name="http_post_task">HTTP POST (Task)</string>
    <string name="http_put">HTTP PUT</string>
    <string name="http_delete">HTTP DELETE</string>
    <string name="http_auth">HTTP Auth</string>
    <string name="https_ssl">HTTPS (SSL)</string>
</resources>
