<?xml version="1.0" encoding="UTF-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_socket_examples">
        <PreferenceScreen
            android:key="phxandroid.examples.socket.tcp"
            android:title="@string/socket_tcp">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.socket.TcpActivity" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="phxandroid.examples.socket.udp"
            android:title="@string/socket_udp">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.socket.UdpActivity" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_httpclient_examples">
        <PreferenceScreen
            android:title="@string/http_get">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.http.HttpGetActivity" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/http_get_gzip">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.http.HttpGetGzippedActivity" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/http_post">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.http.HttpPostActivity" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/http_post_task">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.http.HttpPostTaskActivity" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/http_put">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.http.HttpPutActivty" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/http_delete">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.http.HttpDeleteActivity" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/http_auth">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.http.HttpAuthActivity" />
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/https_ssl">
            <intent
                android:targetPackage="org.phxandroid.examples"
                android:action="android.intent.action.VIEW"
                android:targetClass="org.phxandroid.examples.http.HttpsActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>