<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/console_bg">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:background="@color/button_bar">
        <TextView
            android:id="@+id/realm"
            android:text="@string/realm"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:paddingBottom="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/username"
            android:textColor="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/username"
            android:paddingBottom="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_width="fill_parent"
        android:background="@color/button_bar">
        <Button
            android:text="OK"
            android:id="@+id/btnOK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
        <Button
            android:text="Cancel"
            android:id="@+id/btnCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
    </LinearLayout>
    

</LinearLayout>
